<resources>
    <string name="app_name">Biblio</string>
    <string name="nav_search_title">Search</string>
    <string name="nav_books_title">My Ebooks</string>
    <string name="nav_settings_title">Settings</string>
    <string name="desc_sample" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in tellus massa. Aenean et sagittis lacus, ut tincidunt mauris. Etiam cursus vitae mi non fringilla. Vestibulum cursus eleifend diam, tincidunt suscipit lorem viverra a. Morbi convallis posuere mauris, a dignissim enim ultricies ut. Fusce euismod est sed magna ultricies tristique. Nunc leo eros, tincidunt sed consectetur eget, bibendum vel quam. Nam mollis augue aliquam nibh maximus commodo. Nam ac turpis augue. Nam tempus erat ipsum, non ornare est consectetur ut. Maecenas rutrum dictum nibh, vitae placerat nisl. Curabitur efficitur nisl at elementum finibus. Praesent ex justo, porttitor vel ante at, consequat rhoncus purus. Donec ultrices, tellus eget commodo suscipit, tortor purus vulputate diam, in convallis diam elit vel nisl. Mauris interdum scelerisque ipsum, dapibus sodales diam. Etiam enim dolor, luctus vitae lacus et, fringilla aliquet mauris.</string>
    <string name="write_file">This app needs access to your file storage so that it can write files.</string>
    <string name="empty_my_books_msg">You have not added any book yet.</string>
    <string name="done_msg">Done</string>
    <string name="read_now_msg">Read Now</string>
    <string name="reset_msg">Reset</string>
    <string name="filters_option">Filters</string>
    <string name="provider_field">Provider</string>
    <string name="library_genesis_tv" translatable="false">Library Genesis</string>
    <string name="feebooks_tv" translatable="false">Feebooks</string>
    <string name="rating_field">Rating</string>
    <string name="minimum_rating" translatable="false">0+</string>
    <string name="low_rating" translatable="false">2.5+</string>
    <string name="medium_rating" translatable="false">4+</string>
    <string name="high_rating" translatable="false">4.5+</string>
    <string name="language_field">Language</string>
    <string name="italian_lang">Italian</string>
    <string name="english_lang">English</string>
    <string name="spanish_lang">Spanish</string>
    <string name="german_lang">German</string>
    <string name="show_results_msg">Show Results</string>
    <string name="loading_msg">Loading</string>
    <string name="loading_please_wait_msg">Loading. Please wait…</string>
    <string name="add_to_my_books_msg">Download</string>
    <string name="remove_from_my_books_msg">Remove</string>
    <string name="sort_by_option">Sort by</string>
    <string name="nav_popular_title">Popular</string>
    <string name="nav_recent_title">Recent</string>
    <string name="your_profile_tv">Your profile</string>
    <string name="perform_the_login_msg">Perform the login in order to customize your experience.</string>
    <string name="no_account_yet_msg">Don\'t have an account yet? Signup now</string>
    <string name="settings_msg">Settings</string>
    <string name="introduction_search_title">Search facility</string>
    <string name="introduction_download_title">Store books</string>
    <string name="introduction_refresh_title">Refresh facility</string>
    <string name="introduction_search">Search any books simply typing a short query in the search bar.</string>
    <string name="introduction_download">Store your favorite ebooks in your device\'s local storage.</string>
    <string name="introduction_refresh">Swipe down in order to refresh data in Popular and Recent sections.</string>
    <string name="nav_profile_title">Profile</string>
    <string name="login_process_tv">Login process</string>
    <string name="please_wait_tv">Please wait…</string>
    <string name="login_to_proceed_tv">Login to proceed</string>
    <string name="email_address_tv">Email address</string>
    <string name="password_field" translatable="false">Password</string>
    <string name="login_msg">Login</string>
    <string name="logoff_msg">Logoff</string>
    <string name="create_account_msg">Create an account</string>
    <string name="name_hint">Name</string>
    <string name="confirm_password_tv">Confirm password</string>
    <string name="accept_terms_tv">I accept terms and rule of this application.</string>
    <string name="signup_msg">Signup</string>
    <string name="feedbooks_enabled_pref" translatable="false">feedbooks_enabled</string>
    <string name="libgen_enabled_pref" translatable="false">libgen_enabled</string>
    <string name="standard_ebooks_enabled_pref" translatable="false">standard_ebooks_enabled</string>
    <string name="source_code_pref" translatable="false">github</string>
    <string name="dependencies_pref">dependencies</string>
    <string name="open_source_libs">Open source libraries</string>
    <string name="external_readers_pref" translatable="false">external_readers</string>
    <string name="download_tv" translatable="false">Download</string>
    <string name="reviews_tv">Reviews</string>
    <string name="insert_review_tv">Insert a review (max 100 characters)</string>
    <string name="cancel_msg">Cancel</string>
    <string name="post_msg">Post</string>
    <string name="search_hint">Search any book!</string>
    <string name="override_libgen_pref" translatable="false">override_libgen</string>
    <string name="libgen_mirror_pref" translatable="false">libgen_mirror</string>
    <string name="libgen_max_pref" translatable="false">libgen_max</string>
    <string name="or_msg">OR</string>
    <string name="login_error_msg">Login was not successful</string>
    <string name="no_description">Description not available.</string>
    <string name="download_template" translatable="false">download</string>
    <string name="downloads_template" translatable="false">downloads</string>
    <string name="review_template">review</string>
    <string name="reviews_template">reviews</string>
    <string name="empty_reviews_msg">It has not been found any reviews for this book !</string>
    <string name="null_field_placeholder" translatable="false">-</string>
    <string name="ebook_cover_cd">Book cover</string>
    <string name="other_lang">Other</string>
    <string name="EAN_pref" translatable="false">scanning</string>
    <string name="storage_permission_title">Read/Write external local storage permission</string>
    <string name="storage_permission_msg">Both read and write permission are needed to store and retrieve downloaded files.</string>
    <string name="no_sd_card_msg">SD Card not found</string>
    <string name="login_error_title">Error</string>
    <string name="back_pressed_msg">Click BACK again to exit</string>
    <string name="theme_pref" translatable="false">theme</string>
    <string name="description_msg">Description</string>
    <string name="infos_msg">Details</string>
    <string name="last_search_tv">Last search</string>
</resources>
