<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/settings_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:src="@drawable/settings_outline"
            android:tint="@color/main_book_text" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/your_profile_tv"
        android:textColor="@color/main_book_text"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/info_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/perform_the_login_msg"
        android:textColor="@color/main_book_text"
        android:textSize="15sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/email_login_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/login_btn"
        android:text="@string/login_msg"
        android:textAllCaps="false"
        android:textColor="@color/main_book_text" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/item_decorator"
        android:tint="@color/main_book_text" />
</LinearLayout>